Add da classe teste AddPrimaryContactTest

--- a/force-app/main/default/classes/AddPrimaryContact.cls
+++ b/force-app/main/default/classes/AddPrimaryContact.cls
@@ -2,18 +2,18 @@ public class AddPrimaryContact implements Queueable {
   private contact cont;
   private String st;
   public AddPrimaryContact(Contact contact, String state) {
-    this.cont = cont;
+    this.cont = contact;
     this.st = state;
   }
 
-  List<Contact> contactsToClone = new List<Contact>();
-  List<Account> selectedAcc = [
-    SELECT Id, Name
-    FROM Account
-    WHERE BillingState = :st
-    LIMIT 200
-  ];
   public void execute(QueueableContext context) {
+    List<Contact> contactsToClone = new List<Contact>();
+    List<Account> selectedAcc = [
+      SELECT Id, Name
+      FROM Account
+      WHERE BillingState = :st
+      LIMIT 200
+    ];
     for (Account acc : selectedAcc) {
       Contact clonnedContact = cont.clone(false, true, false);
       clonnedContact.accountId = acc.Id;
